README.md: updated to give example of running ProIOBrowser